--- a/index.html
+++ b/index.html
@@ -1,14 +1,88 @@
 <!DOCTYPE html>
 <html> 
-  <link rel="stylesheet" href="styles.css">
-<!--
 
--->
+  <!--
+    
+    Website Structure:
+    - navigation bar
+    - home
+    - about
+    - science
+    - scioly
+    - usabo
+    - ocsef
+     - robotics
+     - frc
+     - sports
+     - volleyball
+     - 
+     - programmin
+     - AI
+     - TRAIN
+     - Games
+     - interesting title page element
+     - carosel?
+     - video?
+     - interactive game? <--i like that
+     - endless 2d runner, passes through accomplishments
+     - rhythm game w/ music i made
+     - rpg
+     - 
+  -->
 
-  <div>
-    <p>div1</p>
+<head>
+      <title>Website</title>
+      <link rel="stylesheet" href="styles.css">
+</head>
+
+
+<body>
+<!-- nav bar-->
+<nav>
+  <div id="nav-logo-section" class="nav-section">
+    <a href="#">
+      logo
+    </a>
   </div>
 
+  <div id="nav-pages-section">
+    <ul>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">IDK</a></li>
+      <li><a href="#">Contacts</a></li>
+    </ul>
+  </div>
+
+  <div id="nav-contacts-section" class="nav-section">
+    <a href="#">
+      youtube
+    </a>
+    <a href="#">
+      facebook
+    </a>
+    <a href="#">
+      instagram
+    </a>
+  </div>
+
+</nav>
+
+<!--
+  <div>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="https://www.google.com/">About</a></li>
+      <li><a href="https://www.google.com/">Projects</a></li>
+      <li><a href="https://www.google.com/">IDK</a></li>
+      <li><a href="https://www.google.com/">Contacts</a></li>
+    </ul>
+  </div>
+  <div class="content">
+    <p>testtestdsgfdgdgdgdfzgrsfgsrefbsedfbsexdrfsdasdsfhawbeksd,fhnaekudyjfhgawesdky,fhgawueskyjhfgsyukdhfg</p>
+  </div>
+</body>
+  
   <head>
     <title>Hello World</title> 
     <p>hello</p>
@@ -17,4 +91,5 @@
   <body> 
     <h1>Hello World</h1> 
   </body>
+-->
 </html>
